Huge refactor, major improvements:
* Implemented proper caching of credentials list
* Proxy credential objects to carefully handle credential resolution only when secret is actually requested
* Support for Bitwarden credentials within the UI
* Controls and information about caching, and the bitwarden CLI in the configuration page.
* Updated help information for configuration page.
* General lifecycle and workflow improvements.